// cursor.proto - VoiceCursor service definitions
//
// Copyright (C) Manoj Jhawar, Intelligent Devices LLC
// Created: 2025-12-28
//
// Replaces: VoiceCursor AIDL interfaces

syntax = "proto3";

package com.augmentalis.universalrpc.cursor;

option java_package = "com.augmentalis.universalrpc.cursor";
option java_multiple_files = true;

// Cursor position on screen
message CursorPosition {
    int32 x = 1;
    int32 y = 2;
    int64 timestamp = 3;
}

// Cursor configuration
message CursorConfig {
    int32 size = 1;           // Cursor size in dp
    int32 color = 2;          // ARGB color value
    float speed = 3;          // Movement speed multiplier
    bool visible = 4;         // Visibility state
    string mode = 5;          // Mode: "gaze", "touch", "voice"
}

// Cursor movement request
message MoveCursorRequest {
    string request_id = 1;
    int32 target_x = 2;
    int32 target_y = 3;
    bool animate = 4;         // Smooth animation
    int32 duration_ms = 5;    // Animation duration
}

// Cursor action request
message CursorActionRequest {
    string request_id = 1;
    string action = 2;        // "click", "double_click", "long_press", "scroll"
    map<string, string> params = 3;
}

// Cursor response
message CursorResponse {
    string request_id = 1;
    bool success = 2;
    string message = 3;
    CursorPosition position = 4;
}

// Service definition
service VoiceCursorService {
    // Get current cursor position
    rpc GetPosition(GetPositionRequest) returns (CursorPosition);

    // Move cursor to position
    rpc MoveTo(MoveCursorRequest) returns (CursorResponse);

    // Execute cursor action
    rpc ExecuteAction(CursorActionRequest) returns (CursorResponse);

    // Update cursor configuration
    rpc Configure(CursorConfig) returns (CursorResponse);

    // Stream cursor position updates
    rpc StreamPosition(StreamPositionRequest) returns (stream CursorPosition);
}

message GetPositionRequest {
    string request_id = 1;
}

message StreamPositionRequest {
    string request_id = 1;
    int32 interval_ms = 2;    // Update interval in ms
}
